<resources>
    <string name="app_name">anitahrdassistant</string>
    <string name="interview_finished">Interview Finished</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="see_profile"><![CDATA[See Profile >]]></string>
    <string name="applicants">Applicants</string>
    <string name="add">Add</string>
    <string name="sort_date">Sort Date</string>
    <string name="sort_position">Sort Position</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="company_name">Company Name</string>
    <string name="discipline">Discipline</string>
    <string name="interview_created">Interview Created</string>
    <string name="applicants_joined">Applicants Joined</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_interview">Create Interview</string>
    <string name="position">Position</string>
    <string name="ex_game_designer">Ex: Game Designer</string>
    <string name="schedule">Schedule</string>
    <string name="pick_date">Pick Date</string>
    <string name="set_time">Set Time</string>
    <string name="room_code">Room Code</string>
    <string name="send_invitation_via_email">Send invitation via Email</string>
    <string name="schedule_an_interview">Schedule an Interview</string>
    <string name="applicant_details">Applicant</string>
    <string name="on_going_interview">On-going Interview</string>
    <string name="expression_analysis">Expression Analysis</string>
    <string name="verbal_analysis">Verbal Analysis</string>
    <string name="start_interview">Start Interview</string>
    <string name="salary_prediction">Salary Prediction</string>
    <string name="interviews">Interviews</string>
    <string name="join_interview">Join Interview</string>
    <string name="xxx_xxx_xxxx">XXX-XXX-XXXX</string>
    <string name="search_room">Search</string>
    <string name="recruiter_email">Recruiter Email</string>
    <string name="recruiter_name">Recruiter Name</string>
    <string name="interview_date">Interview Date</string>
    <string name="no_result">Data not found or there is already recruiter joined.</string>
    <string name="interview">Interview</string>
</resources>