<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    android:padding="16dp"
    tools:context=".activities.DetailProfileActivity">
    <Button
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:id="@+id/detailprofile_button_back"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/detailprofile_button_back"
        android:text="@string/profile"
        android:fontFamily="@font/rubik"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="10dp"
        android:id="@+id/detailprofile_textView_header"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_header"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="5dp"
        android:id="@+id/detailprofile_cardView_base">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:id="@+id/detailProfile_constraintLayout_basecontent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_nameStatic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ahmad Reihan Alavi"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_nameStatic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_nameDynamic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_nameDynamic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_emailStatic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="reihanalavi@gmail.com"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_emailStatic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_emailDynamic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_emailDynamic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_roleStatic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="HRD/Recruiter"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_roleStatic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_roleDynamic"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/detailProfile_progressBar_base"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailprofile_cardView_base"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="5dp"
        android:id="@+id/detailprofile_cardView_company">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:id="@+id/detailProfile_constraintLayout_companyContent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_companyStatic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Akhza Tech Inc."
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_companyStatic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_companyDynamic"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/discipline"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/detailprofile_textView_disciplineStatic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Technology"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_disciplineStatic"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/detailprofile_textView_disciplineDynamic"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/interview_created"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_companyDynamic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_createdStatic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="16"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_createdStatic"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/detailprofile_textView_createdDynamic"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/applicants_joined"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik"
                android:textColor="@color/colorBlue2"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_disciplineDynamic"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/detailprofile_textView_applicantsStatic"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="8"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/detailprofile_textView_applicantsStatic"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/detailprofile_textView_applicantsDynamic"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/detailProfile_progressBar_company"/>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailprofile_cardView_company"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_red"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:id="@+id/detailProfile_button_signOut"/>
</androidx.constraintlayout.widget.ConstraintLayout>