<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HRDDashboardActivity"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/hrddashboard_constraintLayout_header"
        android:background="@drawable/topbg">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="32sp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/hrddashboard_textView_welcome"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hrddashboard_textView_welcome"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Ahmad Reihan Alavi"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_light"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/hrddashboard_textView_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hrddashboard_textView_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Akhza Tech Inc."
            android:fontFamily="@font/rubik_medium"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:id="@+id/hrddashboard_textView_company"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hrddashboard_textView_company"
            app:layout_constraintStart_toStartOf="parent"
            android:shadowColor="@color/black"
            app:layout_constraintCircleRadius="120dp"
            android:paddingHorizontal="15dp"
            android:shadowDy="50"
            android:background="@drawable/button_white"
            android:text="@string/see_profile"
            android:textColor="@color/colorBlue"
            android:fontFamily="@font/rubik_medium"
            android:textAllCaps="false"
            android:id="@+id/hrddashboard_button_profile"
            android:layout_marginTop="16dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_baseline_notifications_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/hrddashboard_button_notifications"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/hrddashboard_card_applicants"
        app:layout_constraintBottom_toBottomOf="@id/hrddashboard_constraintLayout_header">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicants"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/rubik_medium"
                android:textSize="32sp"
                android:textColor="@color/colorBlue"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/hrddashboard_constraintLayout_header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/hrddashboard_constraintLayout_content">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_blue_selected"
            android:text="@string/sort_date"
            android:paddingHorizontal="24dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/hrddashboard_button_sortdate"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/hrddashboard_button_sortdate"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_blue_unselected"
            android:text="@string/sort_position"
            android:paddingHorizontal="24dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/colorBlue"
            android:id="@+id/hrddashboard_button_sortpos"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/hrddashboard_button_sortdate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/hrddashboard_recyclerView_content"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/hrddashboard_progressBar"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:id="@+id/hrddashboard_fab_add"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/colorBlue"
            android:contentDescription="@string/add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>